--- a/trunk/device/MultiIO/FPGA/src/top.ucf
+++ b/trunk/device/MultiIO/FPGA/src/top.ucf
@@ -25,26 +25,30 @@
 
 # FCLK (48 MHz)
 NET "FCLK_IN" TNM_NET = "TNM_FCLK_IN";
-TIMESPEC TS_FCLK_IN = PERIOD "TNM_FCLK_IN" 20.833 ns HIGH 50 %;
+#TIMESPEC TS_FCLK_IN = PERIOD "TNM_FCLK_IN" 20.833 ns HIGH 50 %;
+TIMESPEC TS_FCLK_IN = PERIOD "TNM_FCLK_IN" 20.8 ns HIGH 50 %;
 
 NET "icmd/i_cmd_seq_core/BUS_CLK" TNM_NET = "tn_BUS_CLK";
 
-NET "icmd/i_cmd_seq_core/CMD_CLK_IN" TNM_NET ="tn_CLK_40";
-TIMESPEC TS_FALSE_CLK_40_BUS_CLK = FROM "tn_CLK_40" TO "tn_BUS_CLK" TIG;
-TIMESPEC TS_FALSE_BUS_CLK_CLK_40 = FROM "tn_BUS_CLK" TO "tn_CLK_40" TIG;
+NET "icmd/i_cmd_seq_core/CMD_CLK_IN" TNM_NET = "tn_CLK_40";
+TIMESPEC TS_FALSE_CLK_40_BUS_CLK = FROM "tn_CLK_40" TO "tn_BUS_CLK" TIG ;
+TIMESPEC TS_FALSE_BUS_CLK_CLK_40 = FROM "tn_BUS_CLK" TO "tn_CLK_40" TIG ;
 
-NET "DATA_CLK" TNM_NET = tn_DATA_CLK;
-TIMESPEC TS_FCLK_IN = PERIOD "tn_DATA_CLK" 3.125 ns HIGH 50 %;
-TIMESPEC TS_FALSE_DATA_CLK_BUS_CLK = FROM "tn_DATA_CLK" TO "tn_BUS_CLK" TIG;
-TIMESPEC TS_FALSE_BUS_CLK_DATA_CLK = FROM "tn_BUS_CLK" TO "tn_DATA_CLK" TIG;
+NET "DATA_CLK" TNM_NET = "tn_DATA_CLK";
+#TIMESPEC TS_FCLK_IN = PERIOD "tn_DATA_CLK" 3.125 ns HIGH 50 %;
+#TIMESPEC TS_DATA_CLK = PERIOD "tn_DATA_CLK" 31.25 ns HIGH 50 %;
+TIMESPEC TS_FALSE_DATA_CLK_BUS_CLK = FROM "tn_DATA_CLK" TO "tn_BUS_CLK" TIG ;
+TIMESPEC TS_FALSE_BUS_CLK_DATA_CLK = FROM "tn_BUS_CLK" TO "tn_DATA_CLK" TIG ;
 
-NET "RX_CLK" TNM_NET = tn_RX_CLK;
-TIMESPEC TS_FALSE_RX_CLK_BUS_CLK = FROM "tn_RX_CLK" TO "tn_BUS_CLK" TIG;
-TIMESPEC TS_FALSE_BUS_CLK_RX_CLK = FROM "tn_BUS_CLK" TO "tn_RX_CLK" TIG;
+NET "RX_CLK" TNM_NET = "tn_RX_CLK";
+#TIMESPEC "TS_RX_CLK" = PERIOD "tn_RX_CLK" 3.125 ns HIGH 50 %;
+TIMESPEC TS_FALSE_RX_CLK_BUS_CLK = FROM "tn_RX_CLK" TO "tn_BUS_CLK" TIG ;
+TIMESPEC TS_FALSE_BUS_CLK_RX_CLK = FROM "tn_BUS_CLK" TO "tn_RX_CLK" TIG ;
 
-NET "RX_CLK90" TNM_NET = tn_RX_CLK90;
-TIMESPEC TS_FALSE_RX_CLK90_BUS_CLK = FROM "tn_RX_CLK90" TO "tn_BUS_CLK" TIG;
-TIMESPEC TS_FALSE_BUS_CLK_RX_CLK90 = FROM "tn_BUS_CLK" TO "tn_RX_CLK90" TIG;
+#NET "RX_CLK90" TNM_NET = "tn_RX_CLK90";
+#TIMESPEC "TS_RX_CLK90" = PERIOD "tn_RX_CLK90" 3.125 ns HIGH 50 %;
+#TIMESPEC TS_FALSE_RX_CLK90_BUS_CLK = FROM "tn_RX_CLK90" TO "tn_BUS_CLK" TIG ;
+#TIMESPEC TS_FALSE_BUS_CLK_RX_CLK90 = FROM "tn_BUS_CLK" TO "tn_RX_CLK90" TIG ;
 
 
 # LCLK (max 167 MHz PLL clock)
@@ -65,7 +69,8 @@ TIMESPEC TS_FALSE_BUS_CLK_RX_CLK90 = FROM "tn_BUS_CLK" TO "tn_RX_CLK90" TIG;
 #NET "XCKR"     CLOCK_DEDICATED_ROUTE = FALSE;
 # ------ USB-Interface ---------------------------------------------
 
-NET "FCLK_IN"       LOC = "N10"     |   IOSTANDARD = LVCMOS33;
+NET "FCLK_IN" LOC = N10;
+NET "FCLK_IN" IOSTANDARD = LVCMOS33;
 #NET "LCK1"         LOC = "P9"      |   IOSTANDARD = LVCMOS33;      
 #NET "UCLK_IN"      LOC = "P10"     |   IOSTANDARD = LVCMOS33;
 
@@ -78,14 +83,22 @@ NET "WR_B" LOC = V12;
 NET "RD_B" IOSTANDARD = LVCMOS33;
 NET "RD_B" LOC = U10;
 
-NET "BUS_DATA[7]" LOC = T7 |IOSTANDARD = LVCMOS33;
-NET "BUS_DATA[6]" LOC = R7 |IOSTANDARD = LVCMOS33;
-NET "BUS_DATA[5]" LOC = V9 |IOSTANDARD = LVCMOS33;
-NET "BUS_DATA[4]" LOC = U9 |IOSTANDARD = LVCMOS33;
-NET "BUS_DATA[3]" LOC = P11 |IOSTANDARD = LVCMOS33;
-NET "BUS_DATA[2]" LOC = N11 |IOSTANDARD = LVCMOS33;
-NET "BUS_DATA[1]" LOC = R12 |IOSTANDARD = LVCMOS33;
-NET "BUS_DATA[0]" LOC = T12 |IOSTANDARD = LVCMOS33;
+NET "BUS_DATA[7]" LOC = T7;
+NET "BUS_DATA[7]" IOSTANDARD = LVCMOS33;
+NET "BUS_DATA[6]" LOC = R7;
+NET "BUS_DATA[6]" IOSTANDARD = LVCMOS33;
+NET "BUS_DATA[5]" LOC = V9;
+NET "BUS_DATA[5]" IOSTANDARD = LVCMOS33;
+NET "BUS_DATA[4]" LOC = U9;
+NET "BUS_DATA[4]" IOSTANDARD = LVCMOS33;
+NET "BUS_DATA[3]" LOC = P11;
+NET "BUS_DATA[3]" IOSTANDARD = LVCMOS33;
+NET "BUS_DATA[2]" LOC = N11;
+NET "BUS_DATA[2]" IOSTANDARD = LVCMOS33;
+NET "BUS_DATA[1]" LOC = R12;
+NET "BUS_DATA[1]" IOSTANDARD = LVCMOS33;
+NET "BUS_DATA[0]" LOC = T12;
+NET "BUS_DATA[0]" IOSTANDARD = LVCMOS33;
 
 NET "ADD[15]" IOSTANDARD = LVCMOS33;
 NET "ADD[15]" LOC = R11;
@@ -179,31 +192,50 @@ NET "LED1" LOC = P13;
 #NET "FPGA_SPARE_1"      LOC=C16    |   IOSTANDARD = LVCMOS33;
 #NET "FPGA_SPARE_2"      LOC=K6     |   IOSTANDARD = LVCMOS33;
 
-NET "MULTI_IO<10>"     LOC=H5     |   IOSTANDARD = LVCMOS33;
-NET "MULTI_IO<9>"      LOC=N5     |   IOSTANDARD = LVCMOS33;
-NET "MULTI_IO<8>"      LOC=L6     |   IOSTANDARD = LVCMOS33;
-NET "MULTI_IO<7>"      LOC=L3     |   IOSTANDARD = LVCMOS33;
-NET "MULTI_IO<6>"      LOC=L4     |   IOSTANDARD = LVCMOS33;
-NET "MULTI_IO<5>"      LOC=L2     |   IOSTANDARD = LVCMOS33;
-NET "MULTI_IO<4>"      LOC=L1     |   IOSTANDARD = LVCMOS33;
-NET "MULTI_IO<3>"      LOC=K5     |   IOSTANDARD = LVCMOS33;
-NET "MULTI_IO<2>"      LOC=K4     |   IOSTANDARD = LVCMOS33;
-NET "MULTI_IO<1>"      LOC=K1     |   IOSTANDARD = LVCMOS33;
-NET "MULTI_IO<0>"      LOC=K2     |   IOSTANDARD = LVCMOS33;
+NET "MULTI_IO[10]" LOC = H5;
+NET "MULTI_IO[10]" IOSTANDARD = LVCMOS33;
+NET "MULTI_IO[9]" LOC = N5;
+NET "MULTI_IO[9]" IOSTANDARD = LVCMOS33;
+NET "MULTI_IO[8]" LOC = L6;
+NET "MULTI_IO[8]" IOSTANDARD = LVCMOS33;
+NET "MULTI_IO[7]" LOC = L3;
+NET "MULTI_IO[7]" IOSTANDARD = LVCMOS33;
+NET "MULTI_IO[6]" LOC = L4;
+NET "MULTI_IO[6]" IOSTANDARD = LVCMOS33;
+NET "MULTI_IO[5]" LOC = L2;
+NET "MULTI_IO[5]" IOSTANDARD = LVCMOS33;
+NET "MULTI_IO[4]" LOC = L1;
+NET "MULTI_IO[4]" IOSTANDARD = LVCMOS33;
+NET "MULTI_IO[3]" LOC = K5;
+NET "MULTI_IO[3]" IOSTANDARD = LVCMOS33;
+NET "MULTI_IO[2]" LOC = K4;
+NET "MULTI_IO[2]" IOSTANDARD = LVCMOS33;
+NET "MULTI_IO[1]" LOC = K1;
+NET "MULTI_IO[1]" IOSTANDARD = LVCMOS33;
+NET "MULTI_IO[0]" LOC = K2;
+NET "MULTI_IO[0]" IOSTANDARD = LVCMOS33;
 
 
 # ------ Trigger IOs ----------------------------------------------
 
-NET "LEMO_RX<2>"         LOC=N2     |   IOSTANDARD = LVCMOS33;
-NET "LEMO_RX<1>"         LOC=P1     |   IOSTANDARD = LVCMOS33;
-NET "LEMO_RX<0>"         LOC=P3     |   IOSTANDARD = LVCMOS33;
+NET "LEMO_RX[2]" LOC = N2;
+NET "LEMO_RX[2]" IOSTANDARD = LVCMOS33;
+NET "LEMO_RX[1]" LOC = P1;
+NET "LEMO_RX[1]" IOSTANDARD = LVCMOS33;
+NET "LEMO_RX[0]" LOC = P3;
+NET "LEMO_RX[0]" IOSTANDARD = LVCMOS33;
 
-NET "RJ45_RESET"         LOC=L5     |   IOSTANDARD = LVCMOS33;
-NET "RJ45_TRIGGER"       LOC=M1     |   IOSTANDARD = LVCMOS33;
+NET "RJ45_RESET" LOC = L5;
+NET "RJ45_RESET" IOSTANDARD = LVCMOS33;
+NET "RJ45_TRIGGER" LOC = M1;
+NET "RJ45_TRIGGER" IOSTANDARD = LVCMOS33;
 
-NET "TX<2>"              LOC=R3     |   IOSTANDARD = LVCMOS33;
-NET "TX<1>"              LOC=M5     |   IOSTANDARD = LVCMOS33;
-NET "TX<0>"              LOC=M3     |   IOSTANDARD = LVCMOS33;
+NET "TX[2]" LOC = R3;
+NET "TX[2]" IOSTANDARD = LVCMOS33;
+NET "TX[1]" LOC = M5;
+NET "TX[1]" IOSTANDARD = LVCMOS33;
+NET "TX[0]" LOC = M3;
+NET "TX[0]" IOSTANDARD = LVCMOS33;
 
 
 # ------ Async SRAM ------------------------------------------------
@@ -390,34 +422,58 @@ NET "CMD_DATA" IOSTANDARD = LVCMOS33;
 NET "CMD_DATA" LOC = A12;
 
 # FE data input
-NET "DOBOUT[0]" LOC = B13 | IOSTANDARD = LVCMOS33; # BIC only
-NET "DOBOUT[1]" LOC = B10 | IOSTANDARD = LVCMOS33; # BIC only
-NET "DOBOUT[2]" LOC = C11 | IOSTANDARD = LVCMOS33; # BIC only
-NET "DOBOUT[3]" LOC = A11 | IOSTANDARD = LVCMOS33; # DO on SCC
+# BIC only
+NET "DOBOUT[0]" LOC = B13;
+NET "DOBOUT[0]" IOSTANDARD = LVCMOS33;
+# BIC only
+NET "DOBOUT[1]" LOC = B10;
+NET "DOBOUT[1]" IOSTANDARD = LVCMOS33;
+# BIC only
+NET "DOBOUT[2]" LOC = C11;
+NET "DOBOUT[2]" IOSTANDARD = LVCMOS33;
+# DO on SCC
+NET "DOBOUT[3]" LOC = A11;
+NET "DOBOUT[3]" IOSTANDARD = LVCMOS33;
 
 # Enable LVDS Transceiver
-NET "EN_V1" LOC = H6 | IOSTANDARD = LVCMOS33; # EN_VA1 on SCC, EN_VDD1 on BIC
-NET "EN_V2" LOC = G5 | IOSTANDARD = LVCMOS33; # EN_VA2 on SCC, EN_VDD2 on BIC
-NET "EN_V3" LOC = C1 | IOSTANDARD = LVCMOS33; # EN_VD2 on SCC, EN_VDD3 on BIC
-NET "EN_V4" LOC = F5 | IOSTANDARD = LVCMOS33; # EN_VD1 on SCC, EN_VDD4 on BIC
+# EN_VA1 on SCC, EN_VDD1 on BIC
+NET "EN_V1" LOC = H6;
+NET "EN_V1" IOSTANDARD = LVCMOS33;
+# EN_VA2 on SCC, EN_VDD2 on BIC
+NET "EN_V2" LOC = G5;
+NET "EN_V2" IOSTANDARD = LVCMOS33;
+# EN_VD2 on SCC, EN_VDD3 on BIC
+NET "EN_V3" LOC = C1;
+NET "EN_V3" IOSTANDARD = LVCMOS33;
+# EN_VD1 on SCC, EN_VDD4 on BIC
+NET "EN_V4" LOC = F5;
+NET "EN_V4" IOSTANDARD = LVCMOS33;
 
 # Over Current Protection (BIC only)
-NET "OC1" LOC = F2 | IOSTANDARD = LVCMOS33;
-NET "OC2" LOC = E1 | IOSTANDARD = LVCMOS33;
-NET "OC3" LOC = D1 | IOSTANDARD = LVCMOS33;
-NET "OC4" LOC = D2 | IOSTANDARD = LVCMOS33;
+NET "OC1" LOC = F2;
+NET "OC1" IOSTANDARD = LVCMOS33;
+NET "OC2" LOC = E1;
+NET "OC2" IOSTANDARD = LVCMOS33;
+NET "OC3" LOC = D1;
+NET "OC3" IOSTANDARD = LVCMOS33;
+NET "OC4" LOC = D2;
+NET "OC4" IOSTANDARD = LVCMOS33;
 
 # Select (SEL) LED (BIC only)
-NET "SEL1" LOC = B14 | IOSTANDARD = LVCMOS33;
-NET "SEL2" LOC = D13 | IOSTANDARD = LVCMOS33;
-NET "SEL3" LOC = C12 | IOSTANDARD = LVCMOS33;
-NET "SEL4" LOC = B15 | IOSTANDARD = LVCMOS33;
+NET "SEL1" LOC = B14;
+NET "SEL1" IOSTANDARD = LVCMOS33;
+NET "SEL2" LOC = D13;
+NET "SEL2" IOSTANDARD = LVCMOS33;
+NET "SEL3" LOC = C12;
+NET "SEL3" IOSTANDARD = LVCMOS33;
+NET "SEL4" LOC = B15;
+NET "SEL4" IOSTANDARD = LVCMOS33;
 
 # input of data to clock phase alignment
-NET "*DOBOUT_0_IBUF" MAXSKEW = 500 pS ;
-NET "*DOBOUT_1_IBUF" MAXSKEW = 500 pS ;
-NET "*DOBOUT_2_IBUF" MAXSKEW = 500 pS ;
-NET "*DOBOUT_3_IBUF" MAXSKEW = 500 pS ;
+#NET "*DOBOUT_0_IBUF" MAXSKEW = 500 pS ;
+#NET "*DOBOUT_1_IBUF" MAXSKEW = 500 pS ;
+#NET "*DOBOUT_2_IBUF" MAXSKEW = 500 pS ;
+#NET "*DOBOUT_3_IBUF" MAXSKEW = 500 pS ;
 
 ##INST "ifei4_rx/ireceiver_logic/sync_master_inst" RLOC_ORIGIN = "X2Y3";
 ##TIMESPEC ts_sync = FROM FFS(*bz(0):*cz(0):*cz(1):*dz(0):*dz(1):*dz2) TO FFS = 420 MHz;
@@ -426,7 +482,7 @@ NET "*DOBOUT_3_IBUF" MAXSKEW = 500 pS ;
 #TIMESPEC ts_sync_2 = FROM FFS(ifei4_rx_2/ireceiver_logic/sync_master_inst/bz(0):ifei4_rx_2/ireceiver_logic/sync_master_inst/cz(0):ifei4_rx_2/ireceiver_logic/sync_master_inst/cz(1):ifei4_rx_2/ireceiver_logic/sync_master_inst/dz(0):ifei4_rx_2/ireceiver_logic/sync_master_inst/dz(1):ifei4_rx_2/ireceiver_logic/sync_master_inst/dz2) TO FFS = 320 MHz;
 #TIMESPEC ts_sync_1 = FROM FFS(ifei4_rx_1/ireceiver_logic/sync_master_inst/bz(0):ifei4_rx_1/ireceiver_logic/sync_master_inst/cz(0):ifei4_rx_1/ireceiver_logic/sync_master_inst/cz(1):ifei4_rx_1/ireceiver_logic/sync_master_inst/dz(0):ifei4_rx_1/ireceiver_logic/sync_master_inst/dz(1):ifei4_rx_1/ireceiver_logic/sync_master_inst/dz2) TO FFS = 320 MHz;
 
-TIMESPEC ts_sync_rx = FROM FFS(*/ireceiver_logic/sync_master_inst/bz(0):*/ireceiver_logic/sync_master_inst/cz(0):*/ireceiver_logic/sync_master_inst/cz(1):*/ireceiver_logic/sync_master_inst/dz(0):*/ireceiver_logic/sync_master_inst/dz(1):*/ireceiver_logic/sync_master_inst/dz2) TO FFS = 320 MHz;
+#TIMESPEC ts_sync_rx = FROM FFS(*/ireceiver_logic/sync_master_inst/bz(0):*/ireceiver_logic/sync_master_inst/cz(0):*/ireceiver_logic/sync_master_inst/cz(1):*/ireceiver_logic/sync_master_inst/dz(0):*/ireceiver_logic/sync_master_inst/dz(1):*/ireceiver_logic/sync_master_inst/dz2) TO FFS = 320 MHz;
 
 
-
+INST "rx_gen[2].ifei4_rx/i_fei4_rx_core/ireceiver_logic/sync_master_inst/DDRQ_DLY_0" LOC = SLICE_X44Y95;
