--- a/trunk/device/MultiIO/FPGA/src/top.ucf
+++ b/trunk/device/MultiIO/FPGA/src/top.ucf
@@ -469,6 +469,10 @@ NET "SEL3" IOSTANDARD = LVCMOS33;
 NET "SEL4" LOC = B15;
 NET "SEL4" IOSTANDARD = LVCMOS33;
 
+# Hit-OR input
+NET "MONHIT" LOC = E13;
+NET "MONHIT" IOSTANDARD = LVCMOS33;
+
 # input of data to clock phase alignment
 #NET "*DOBOUT_0_IBUF" MAXSKEW = 500 pS ;
 #NET "*DOBOUT_1_IBUF" MAXSKEW = 500 pS ;
