--- a/trunk/host/pybar.yaml
+++ b/trunk/host/pybar.yaml
@@ -1,64 +1,69 @@
 #
 # ------------------------------------------------------------
-# Copyright (c) SILAB , Physics Institute of Bonn University
+# Copyright (c) All rights reserved
+# SiLab, Institute of Physics, University of Bonn
 # ------------------------------------------------------------
 #
 # SVN revision information:
-#  $Rev:: 113                   $:
-#  $Author:: TheresaObermann    $:
-#  $Date:: 2014-05-06 15:49:28 #$:
+#  $Rev::                       $:
+#  $Author::                    $:
+#  $Date::                      $:
 #
 
----
 name    : pyBAR 
 version : 2.0.0
 
 transfer_layer:
-    - name     : usb
+    - name     : USB
       type     : SiUsb
       bit_file : "config/fpga/top.bit"
-      board_id : 101
+      board_id : 
 
 hw_drivers:
   - name      : cmd
     type      : cmd_seq
-    interface : usb
+    interface : USB
     base_addr : 0x10000
 
   - name      : sram
     type      : sram_fifo
-    interface : usb
+    interface : USB
     base_addr : 0x10100
 
   - name      : tlu
     type      : tlu
-    interface : usb
+    interface : USB
     base_addr : 0x10200
 
   - name      : rx_4
     type      : fei4_rx
-    interface : usb
+    interface : USB
     base_addr : 0x10300
 
   - name      : rx_3
     type      : fei4_rx
-    interface : usb
+    interface : USB
     base_addr : 0x10400
     
   - name      : rx_2
     type      : fei4_rx
-    interface : usb
+    interface : USB
     base_addr : 0x10500
 
   - name      : rx_1
     type      : fei4_rx
-    interface : usb
+    interface : USB
     base_addr : 0x10600
 
   - name      : tdc_hitor
     type      : tdc_s3
-    interface : usb
+    interface : USB
     base_addr : 0x10700
+
+  - name      : POWER
+    type      : FEI4AdapterCard
+    interface : USB
+    base_addr : 0x0
 
 user_drivers:
     
