--- a/trunk/device/MultiIO/FPGA/src/top.ucf
+++ b/trunk/device/MultiIO/FPGA/src/top.ucf
@@ -28,9 +28,9 @@ NET "FCLK_IN" TNM_NET = "TNM_FCLK_IN";
 #TIMESPEC TS_FCLK_IN = PERIOD "TNM_FCLK_IN" 20.833 ns HIGH 50 %;
 TIMESPEC TS_FCLK_IN = PERIOD "TNM_FCLK_IN" 20.8 ns HIGH 50 %;
 
-NET "icmd/i_cmd_seq_core/BUS_CLK" TNM_NET = "tn_BUS_CLK";
+NET "BUS_CLK" TNM_NET = "tn_BUS_CLK";
 
-NET "icmd/i_cmd_seq_core/CMD_CLK_IN" TNM_NET = "tn_CLK_40";
+NET "CLK_40" TNM_NET = "tn_CLK_40";
 TIMESPEC TS_FALSE_CLK_40_BUS_CLK = FROM "tn_CLK_40" TO "tn_BUS_CLK" TIG ;
 TIMESPEC TS_FALSE_BUS_CLK_CLK_40 = FROM "tn_BUS_CLK" TO "tn_CLK_40" TIG ;
 
