--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ before_install:
   - conda update --yes anaconda
   - conda create --yes -n anacondaenv python=$TRAVIS_PYTHON_VERSION
   - source activate anacondaenv
+  - cd host
 # The next couple lines fix a crash with multiprocessing on Travis and are not specific to using Miniconda
   - sudo rm -rf /dev/shm
   - sudo ln -s /run/shm /dev/shm
@@ -29,4 +30,4 @@ install:
  
 # Run test
 script:
-- nosetests tests/test_analysis.py --logging-level=INFO
+- nosetests host/tests/test_analysis.py --logging-level=INFO
