--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,8 @@ python:
   - 2.7
 branches:
   only:
+    - master
     - development
-notifications:
-  email:
-    - pfuideibel@gmx.net
  
 # Setup anaconda in a new virtual environment
 before_install:
