--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ python:
   - 2.7
 branches:
   only:
-    - master
-    - development
+    - mio3
  
 # Setup anaconda in a new virtual environment
 before_install:
